fix spacing for normal tags

--- a/components/tag/theme.css
+++ b/components/tag/theme.css
@@ -100,7 +100,8 @@
     }
   }
 
-  .label-button {
+  .label-button,
+  .label {
     padding: 0 6px !important;
   }
 }
